Fixed line in image box by removing the flex and changing the height of the container.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,9 +39,9 @@
 
 .imgcontainer {
   width: 100%;
-  height: 255px;
+  height: 355px;
   background-color: gray;
-  display: flex;
+  /*display: flex;*/
   justify-content: center;
   align-items: center;
   margin-bottom: 5px; }
